--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.6",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^12.0.0-alpha.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-chartjs-2": "^5.2.0",
