--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.54.2",
     "usehooks-ts": "^3.1.0",
     "zustand": "^5.0.1"
   },
